--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="kraken - Kolossal viRtual dAtabase
+      for moleKular dEscriptors of orgaNophosphorus
+      ligands."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kraken V2</title>
+    <title>Kraken v2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
