--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="brand/favicon.ico" />
+    <link rel="icon" href="/brand/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -21,17 +21,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
-    <script>
-      // Fetch the JSON file
-      fetch('/brand/names.json')
-        .then(response => response.json())
-        .then(data => {
-          // Update the site title
-          if (data && data[0].title) {
-            document.title = data[0].title;
-          }
-        })
-        .catch(error => console.error('Error loading site configuration:', error));
-    </script>
   </body>
 </html>
